change language to English

--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.flipboardbanner.MainActivity">
+    tools:context="com.example.chengdazhi.MainActivity">
 
     <it.chengdazhi.decentbanner.DecentBanner
         android:id="@+id/decent_banner"
